feat: Documentation for retrieving all albums
