# docs/swagger.json
@@ -13,5 +13,78 @@
     },
     "host": "localhost:8023",
     "basePath": "/api/music-metadata-service",
-    "paths": {}
+    "paths": {
+        "/albums": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "albums"
+                ],
+                "summary": "Get all albums",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/album_handler.readAllResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.Error"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "album_handler.readAllResponse": {
+            "description": "List of all albums",
+            "type": "object",
+            "properties": {
+                "albums": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/album_handler.readAllResponseItem"
+                    }
+                }
+            }
+        },
+        "album_handler.readAllResponseItem": {
+            "description": "Album details",
+            "type": "object",
+            "properties": {
+                "albumId": {
+                    "type": "integer"
+                },
+                "coverId": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "tracksCount": {
+                    "type": "integer"
+                }
+            }
+        },
+        "types.Error": {
+            "description": "Response structure for error messages",
+            "type": "object",
+            "required": [
+                "error"
+            ],
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
